--- a/comment_static/index_user02.html
+++ b/comment_static/index_user02.html
@@ -31,7 +31,7 @@
     <script src="./js/jquery.min.js"></script>
     <script src="./config.js"></script>
     <script src="./common.js"></script>
-    <script src="./index.js"></script>
+    <script src="./index_user02.js"></script>
 
 </body>
 </html>
